[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/rooms/pieces/Shared_Prop_Boulder_5.obj" type="ArrayMesh" id=1]
[ext_resource path="res://assets/rooms/pieces/Shared_Prop_Boulder_6.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/rooms/pieces/Shared_Prop_Boulder_3.obj" type="ArrayMesh" id=3]
[ext_resource path="res://assets/rooms/pieces/Shared_Prop_Boulder_1.obj" type="ArrayMesh" id=4]
[ext_resource path="res://assets/rooms/pieces/Shared_Prop_Boulder_2.obj" type="ArrayMesh" id=5]
[ext_resource path="res://scripts/falling_boulder.gd" type="Script" id=6]
[ext_resource path="res://audio/traps/zapsplat_foley_mud_dried_clumps_small_fall_roll_hill_break_crumble_landslide_001_41443.mp3" type="AudioStream" id=7]
[ext_resource path="res://audio/traps/zapsplat_foley_mud_dried_clumps_small_fall_roll_hill_break_crumble_landslide_002_41444.mp3" type="AudioStream" id=8]
[ext_resource path="res://audio/traps/zapsplat_foley_mud_dried_clumps_small_fall_roll_hill_break_crumble_landslide_004_41446.mp3" type="AudioStream" id=9]
[ext_resource path="res://audio/traps/zapsplat_horror_hit_violin_stab_reverb_shock_jumpscare_006_60651.mp3" type="AudioStream" id=10]
[ext_resource path="res://audio/traps/zapsplat_horror_hit_violin_stab_reverb_shock_jumpscare_002_60647.mp3" type="AudioStream" id=11]
[ext_resource path="res://audio/traps/zapsplat_horror_hit_violin_stab_reverb_shock_jumpscare_004_60649.mp3" type="AudioStream" id=12]
[ext_resource path="res://audio/traps/zapsplat_foley_dirt_debris_dusty_soil_small_stones_movement_scrape_drop_83221.mp3" type="AudioStream" id=13]
[ext_resource path="res://audio/traps/2022-07-17 15-41-09.mp3" type="AudioStream" id=14]
[ext_resource path="res://audio/traps/impact_stone_large_hit_ground_004.mp3" type="AudioStream" id=15]
[ext_resource path="res://audio/traps/impact_stone_large_hit_ground_001.mp3" type="AudioStream" id=16]
[ext_resource path="res://audio/traps/impact_stone_large_hit_ground_005.mp3" type="AudioStream" id=17]
[ext_resource path="res://audio/traps/impact_stone_large_hit_ground_003.mp3" type="AudioStream" id=18]
[ext_resource path="res://audio/traps/impact_stone_large_hit_ground_002.mp3" type="AudioStream" id=19]

[sub_resource type="PhysicsMaterial" id=8]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -0.5, 0.878424, -0.120595, -0.237373, 0.783027, -0.342208, -0.37128, 0.595433, 0.0110611, -0.5, 1.00807, 0.250489, -0.5, 1.50907, -0.152604, -0.0869225, 1.33556, -0.5, 0.186864, 0.767661, -0.434514, 0.200568, 0.220566, -0.110513, 0.0999413, 0, 0.0457126, -0.252741, 0.895071, 0.467502, -0.5, 1.76197, 0.250489, -0.346613, 2.16629, -0.318226, 0.251175, 0.99527, -0.5, -0.101703, 1.58686, -0.5, 0.362079, 0.575586, 0.239135, 0.5, 1.07914, -0.301096, 0.438136, 0.742371, -0.0315192, 0.39027, 0.94341, 0.393794, -0.032498, 0.971261, 0.5, -0.105423, 0.571424, 0.341327, 0.116092, 1.61503, 0.5, -0.292874, 1.67266, 0.432263, 0.0562842, 3.2704, 0.0338684, -0.264389, 2.77773, 0.0067541, -0.0352388, 2.06577, -0.5, -0.268892, 2.65224, -0.157596, 0.222984, 2.66152, -0.377251, 0.19998, 2.33083, -0.5, 0.365701, 1.19535, -0.5, 0.5, 0.984066, -0.163665, 0.5, 2.39166, -0.146926, 0.5, 1.54909, 0.306774, 0.5, 1.97037, 0.285337, 0.377447, 2.27353, 0.332615, 0.106793, 2.06673, 0.481695, 0.0464957, 2.17621, 0.467991, 0.105717, 2.77133, 0.269773, 0.210748, 3.02711, 0.0478661, 0.31343, 1.89866, -0.5 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 0.0888624, 0.851521, 0.483754, 0.219294, 1.22953, 0.367687, -0.0801424, 1.33721, 0.435377, -0.229814, 0.997992, 0.386522, 0.0439705, 0.603979, 0.467884, 0.0748101, 0.326518, 0.430405, 0.203167, 0.290509, 0.395126, 0.162708, 0.838474, 0.464251, 0.39292, 1.04079, 0.0709211, 0.312945, 1.38052, -0.147638, 0.159407, 1.54596, 0.116621, 0.176854, 1.33303, 0.359273, 0.231366, 0.212924, 0.34694, 0.439604, 0.50552, -0.00881565, -0.0017702, 1.77715, -0.101842, -0.331858, 1.50212, 0.0693913, -0.279798, 1.37026, 0.274565, -0.432487, 1.26902, 0.176567, -0.499542, 0.870656, 0.203146, -0.103437, 0, 0.260798, 0.44215, 0.290335, -0.127847, 0.311907, 1.38226, -0.151845, 0.179872, 1.5557, -0.19439, 0.391883, 0.465683, -0.288468, 0.236459, 0, 0.222746, -0.0323269, 0.849955, -0.459796, -0.240565, 1.37531, -0.248504, -0.448709, 0.971377, 0.024169, -0.521328, 0.660342, 0.148268, -0.301961, 0, 0.144539, 0.214107, 0.305469, -0.424613, 0.312096, 0, 0.0377452, 0.399145, 0.142645, -0.100408, -0.0145022, 0.631986, -0.492972, -0.116358, 0.180046, -0.451765, -0.208311, 0.0902838, -0.386561, -0.310261, 1.15525, -0.212364, -0.391745, 0.234146, -0.0731595, -0.187468, 0, -0.254527 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( 0.151206, 0.293294, -0.461615, 0.200485, 0.506525, -0.440461, 0.191634, 0.180449, -0.446856, -0.0636097, 0.202907, -0.400122, -0.318494, 0.242188, -0.346108, -0.010743, 0.504462, -0.442724, 0.352626, 0.560011, -0.380347, 0.488262, 0.458593, -0.328201, 0.39102, 0.0533987, -0.370016, -0.114922, 0.543346, -0.399139, 0.0294454, 0.138231, -0.400516, -0.348157, 0.211874, -0.327021, -0.348277, 0.212588, -0.326726, -0.250557, 0.479782, -0.341976, 0.296889, 0.656429, -0.272022, 0.537062, 0.437167, -0.273498, 0.610621, 0.342892, -0.19282, 0.604162, 0.100457, -0.205414, 0.49484, 0.083951, -0.328988, 0.326312, 0.644208, -0.23739, 0.616123, 0.0384796, 0.136876, 0.157426, -0.0618271, -0.221451, -0.232257, 0.0249097, -0.286092, -0.255581, 0.536839, -0.321019, -0.284286, 0.580644, -0.281762, -0.154751, 0.581358, -0.35634, 0.202159, 0.675951, -0.250082, -0.235845, -0.0312748, -0.22027, -0.406645, -0.0289735, 0.0159576, -0.572542, 0.186638, 0.0141866, -0.605793, 0.299166, -0.0612765, -0.591081, 0.447007, -0.0330393, -0.434155, 0.597309, -0.136936, -0.0304783, 0.699599, -0.0326458, 0.297965, 0.613815, 0.0128092, 0.426424, 0.440341, 0.189513, 0.434438, 0.223777, 0.413246, 0.553448, 0.0332421, 0.310234, 0.123457, -0.111108, 0.206632, 0.16532, -0.111108, 0.0481303, 0.0910435, -0.108886, -0.105354, -0.142671, -0.105791, 0.218045, -0.333565, 0.175687, 0.372808, -0.181543, -0.0335761, 0.319286, -0.51501, 0.4528, 0.132743, -0.479008, 0.331147, 0.214405, -0.400665, 0.601832, 0.118969, -0.356649, 0.668015, 0.0548206, -0.0908803, 0.689283, 0.133727, 0.0752552, 0.628417, 0.274421, 0.279904, 0.425264, 0.410786, 0.132667, 0.344479, 0.540362, 0.329183, 0.166244, 0.50573, 0.33624, 0.101727, 0.500023, 0.477617, 0.0149107, 0.376842, 0.0302826, 0.122836, 0.534065, -0.0181587, 0.177512, 0.54351, 0.136016, 0.491368, 0.46726 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( -0.180951, 0.391959, -0.438888, -0.152769, 0.0730472, -0.438888, -0.387765, 0.080462, -0.329166, -0.337071, 0.410459, -0.366542, -0.399278, 0.566831, -0.160931, 0.00274947, 0.486737, -0.385702, 0.279331, 0.296373, -0.438888, 0, 0, -0.438888, -0.438888, 0, -0.219444, -0.438888, 0.502007, -0.0767281, -0.337672, 0.458986, 0.297805, -0.138764, 0.75, -0.0275809, 0.143575, 0.725994, -0.147098, 0.346178, 0.479762, -0.270567, 0.302788, 0.140809, -0.438888, 0.146239, 0, -0.438888, -0.438888, 0.147269, 0.278214, -0.355286, 0, 0.313614, -0.392061, 0.0752496, 0.333634, -0.438888, 0.395189, 0.225115, -0.235168, 0.208643, 0.438888, -0.210079, 0.308487, 0.438888, 0.0986381, 0.376395, 0.438888, 0.0437341, 0.733922, 0.14684, -0.139623, 0.685102, 0.153542, -0.134553, 0.692003, 0.14684, 0.273746, 0.639291, -0.169867, 0.438888, 0.357968, -0.13799, 0.438888, 0.0934563, -0.209047, 0.390686, 0.0497749, -0.306569, 0.365339, 0, -0.285604, 0.0438201, 0, 0.438888, 0.29368, 0.339688, 0.438888, 0.2484, 0.552002, 0.326073, 0.438888, 0.452672, 0.162908, 0.438888, 0, 0.0438201, 0.348756, 0, 0.326416, 0.365683, 0.0731206, 0.438888, 0.308201, 0.505824, 0.345405, 0.438888, 0.0860415, 0.318426, 0.438888, 0, 0.146239 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -0.476158, 0.3611, 0.0822211, -0.427139, 0.528093, 0.08533, -0.467271, 0.281323, -0.122305, -0.37535, 0.115995, 0.263196, -0.404876, 0.205854, 0.27808, -0.304738, 0.351703, 0.378318, -0.264319, 0.641543, 0.307662, -0.173258, 0.899276, -0.228478, -0.349551, 0.675705, -0.126827, -0.182813, 0.140172, -0.416236, -0.368566, 0, -0.103181, -0.345634, 0, 0.150145, 0.0483265, 0.135376, 0.487035, -0.238329, 0, 0.294661, -0.0211397, 0.558242, 0.421654, -0.279607, 0.45233, 0.372572, -0.0690112, 0.860121, 0.293248, 0.00427711, 0.957322, 0.236629, -0.021713, 1, -0.00539273, 0.198152, 1, 0.0492482, 0.144643, 0.847788, -0.244211, -0.0563983, 0.814115, -0.356131, -0.0282105, 0.634593, -0.428106, -0.091848, 0.229052, -0.475399, 0.249941, 0.144577, -0.433099, -0.195235, 0, -0.32702, -0.145644, 0, 0.342142, 0.249941, 0.046202, 0.432959, 0.283671, 0.491973, 0.399233, 0.0831074, 0.431774, 0.460939, 0.264083, 0.75832, 0.282037, 0.110817, 0.966132, 0.214301, 0.32858, 0.933438, -0.0408151, 0.389351, 0.71388, -0.191172, 0.249941, 0.345047, -0.433099, 0.159358, 0.187549, -0.457311, 0.432923, 0.115603, -0.250052, 0.338613, 0, -0.344355, 0.22548, 0, 0.388681, 0.5, 0, -2.28286e-05, 0.432923, 0.0909358, 0.249912, 0.310807, 0.541504, 0.372101, 0.452511, 0.38146, 0.176995, 0.432923, 0.5463, -0.250052, 0.5, 0.221711, -2.28286e-05, 0.432923, 0.354738, 0.249912 )

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( -0.476158, 0.3611, 0.0822211, -0.427139, 0.528093, 0.08533, -0.467271, 0.281323, -0.122305, -0.37535, 0.115995, 0.263196, -0.404876, 0.205854, 0.27808, -0.304738, 0.351703, 0.378318, -0.264319, 0.641543, 0.307662, -0.173258, 0.899276, -0.228478, -0.349551, 0.675705, -0.126827, -0.182813, 0.140172, -0.416236, -0.368566, 0, -0.103181, -0.345634, 0, 0.150145, 0.0483265, 0.135376, 0.487035, -0.238329, 0, 0.294661, -0.0211397, 0.558242, 0.421654, -0.279607, 0.45233, 0.372572, -0.0690112, 0.860121, 0.293248, 0.00427711, 0.957322, 0.236629, -0.021713, 1, -0.00539273, 0.198152, 1, 0.0492482, 0.144643, 0.847788, -0.244211, -0.0563983, 0.814115, -0.356131, -0.0282105, 0.634593, -0.428106, -0.091848, 0.229052, -0.475399, 0.249941, 0.144577, -0.433099, -0.195235, 0, -0.32702, -0.145644, 0, 0.342142, 0.249941, 0.046202, 0.432959, 0.283671, 0.491973, 0.399233, 0.0831074, 0.431774, 0.460939, 0.264083, 0.75832, 0.282037, 0.110817, 0.966132, 0.214301, 0.32858, 0.933438, -0.0408151, 0.389351, 0.71388, -0.191172, 0.249941, 0.345047, -0.433099, 0.159358, 0.187549, -0.457311, 0.432923, 0.115603, -0.250052, 0.338613, 0, -0.344355, 0.22548, 0, 0.388681, 0.5, 0, -2.28286e-05, 0.432923, 0.0909358, 0.249912, 0.310807, 0.541504, 0.372101, 0.452511, 0.38146, 0.176995, 0.432923, 0.5463, -0.250052, 0.5, 0.221711, -2.28286e-05, 0.432923, 0.354738, 0.249912 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
vertex_color_use_as_albedo = true

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 0, 0, 0, 1, 0.397949, 0.397949, 0.397949, 0 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
direction = Vector3( 0, 1, 0 )
spread = 120.0
gravity = Vector3( 0, -0.5, 0 )
initial_velocity = 2.0
initial_velocity_random = 0.4
scale = 3.0
scale_random = 0.5
color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
color_ramp = SubResource( 14 )

[sub_resource type="SphereMesh" id=13]

[sub_resource type="BoxShape" id=7]

[node name="boulder_lethal" type="Spatial"]
script = ExtResource( 6 )

[node name="hitbox" type="RigidBody" parent="."]
collision_mask = 16
mass = 6666.15
physics_material_override = SubResource( 8 )
contacts_reported = 10
contact_monitor = true

[node name="Shared_Prop_Boulder_5" type="MeshInstance" parent="hitbox"]
transform = Transform( 2, 0, 0, 0, -1.31134e-07, -2, 0, 3, -8.74228e-08, 0, 0.485158, -4.43402 )
mesh = ExtResource( 1 )
skeleton = NodePath("../..")
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="hitbox"]
transform = Transform( 2, 0, 0, 0, -1.31134e-07, -2, 0, 3, -8.74228e-08, 0, 0.485158, -4.43402 )
shape = SubResource( 1 )

[node name="Shared_Prop_Boulder_3" type="MeshInstance" parent="hitbox"]
transform = Transform( 2, 0, 0, 0, -2.22054e-07, -2.413, 0, 5.08, -1.05476e-07, -1.06332, 0.590616, -3.69812 )
mesh = ExtResource( 3 )
skeleton = NodePath("../..")
material/0 = null

[node name="CollisionShape2" type="CollisionShape" parent="hitbox"]
transform = Transform( 2, 0, 0, 0, -2.22054e-07, -2.413, 0, 5.08, -1.05476e-07, -1.06332, 0.590616, -3.69812 )
shape = SubResource( 2 )

[node name="Shared_Prop_Boulder_6" type="MeshInstance" parent="hitbox"]
transform = Transform( -2.18333e-07, 1.30927, -2.29354, 2.52121e-07, -1.51189, -1.98616, -7.63, -8.74228e-08, 5.79702e-15, -3.08162, 0.92811, 0.342313 )
mesh = ExtResource( 2 )
skeleton = NodePath("../..")
material/0 = null

[node name="CollisionShape3" type="CollisionShape" parent="hitbox"]
transform = Transform( -2.18333e-07, 1.30927, -2.29354, 2.52121e-07, -1.51189, -1.98616, -7.63, -8.74228e-08, 5.79702e-15, -3.08162, 0.92811, 0.342313 )
shape = SubResource( 3 )

[node name="Shared_Prop_Boulder_1" type="MeshInstance" parent="hitbox"]
transform = Transform( 2.702, 0, 0, 0, 1.581, 0, 0, 0, 6.513, -1.17451, 1.45771, 0 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")
material/0 = null

[node name="CollisionShape4" type="CollisionShape" parent="hitbox"]
transform = Transform( 2.702, 0, 0, 0, 1.581, 0, 0, 0, 6.513, -1.17451, 1.45771, 0 )
shape = SubResource( 4 )

[node name="Shared_Prop_Boulder_2" type="MeshInstance" parent="hitbox"]
transform = Transform( 3.913, 0, 0, 0, 1.366, 0, 0, 0, 2.093, -1.14706, -0.0872691, 4.54384 )
mesh = ExtResource( 5 )
skeleton = NodePath("../..")
material/0 = null

[node name="CollisionShape5" type="CollisionShape" parent="hitbox"]
transform = Transform( 3.913, 0, 0, 0, 1.366, 0, 0, 0, 2.093, -1.14706, -0.0872691, 4.54384 )
shape = SubResource( 5 )

[node name="Shared_Prop_Boulder_4" type="MeshInstance" parent="hitbox"]
transform = Transform( 3.913, 0, 0, 0, 1.3433, -0.380018, 0, 0.248019, 2.05821, -0.760492, -0.0872691, -3.28508 )
mesh = ExtResource( 5 )
skeleton = NodePath("../..")
material/0 = null

[node name="CollisionShape6" type="CollisionShape" parent="hitbox"]
transform = Transform( 3.913, 0, 0, 0, 1.3433, -0.380018, 0, 0.248019, 2.05821, -0.760492, -0.0872691, -3.28508 )
shape = SubResource( 6 )

[node name="Particles" type="Particles" parent="hitbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.30229, 0.325483, 0 )
material_override = SubResource( 9 )
emitting = false
amount = 16
lifetime = 4.0
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 12 )
draw_pass_1 = SubResource( 13 )

[node name="Audio" type="Spatial" parent="hitbox"]

[node name="1" type="AudioStreamPlayer3D" parent="hitbox/Audio"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -1.57699, 0, 0.331758 )
stream = ExtResource( 14 )
unit_db = 20.0
bus = "SoundEffects"

[node name="2" type="AudioStreamPlayer3D" parent="hitbox/Audio"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.370952, 0, 0.331758 )
stream = ExtResource( 16 )
bus = "SoundEffects"

[node name="3" type="AudioStreamPlayer3D" parent="hitbox/Audio"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -3.33489, 0, -2.18632 )
stream = ExtResource( 19 )
bus = "SoundEffects"

[node name="4" type="AudioStreamPlayer3D" parent="hitbox/Audio"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.484242, 0, 3.75254 )
stream = ExtResource( 18 )
bus = "SoundEffects"

[node name="5" type="AudioStreamPlayer3D" parent="hitbox/Audio"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.370952, 0, -3.54038 )
stream = ExtResource( 15 )
bus = "SoundEffects"

[node name="6" type="AudioStreamPlayer3D" parent="hitbox/Audio"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -2.88354, 0, 3.46747 )
stream = ExtResource( 17 )
bus = "SoundEffects"

[node name="area" type="Area" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="area"]
transform = Transform( 2.713, 0, 0, 0, 5.788, 0, 0, 0, 1.334, -1.65711, -5.12285, 0.459071 )
shape = SubResource( 7 )

[node name="WarningAudio" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.57699, 0, 0.331758 )

[node name="1" type="AudioStreamPlayer3D" parent="WarningAudio"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
stream = ExtResource( 7 )
bus = "SoundEffects"
emission_angle_enabled = true
emission_angle_degrees = 31.0

[node name="2" type="AudioStreamPlayer3D" parent="WarningAudio"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
stream = ExtResource( 8 )
bus = "SoundEffects"
emission_angle_enabled = true
emission_angle_degrees = 31.0

[node name="3" type="AudioStreamPlayer3D" parent="WarningAudio"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
stream = ExtResource( 9 )
bus = "SoundEffects"
emission_angle_enabled = true
emission_angle_degrees = 31.0

[node name="Scare" type="Spatial" parent="."]

[node name="1" type="AudioStreamPlayer" parent="Scare"]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "SoundEffects"

[node name="2" type="AudioStreamPlayer" parent="Scare"]
stream = ExtResource( 12 )
volume_db = -10.0
bus = "SoundEffects"

[node name="3" type="AudioStreamPlayer" parent="Scare"]
stream = ExtResource( 10 )
volume_db = -10.0
bus = "SoundEffects"

[node name="Drop" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.55402, 0, 0.349218 )
stream = ExtResource( 13 )
unit_db = 10.0
bus = "SoundEffects"

[connection signal="body_entered" from="area" to="." method="_on_area_entered"]
